# chrome-log-beautifier

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
diffusion/include/: apr.h  args.h  buf.h  content.h  conversation.h  d_semaphore.h  diffusion.h  doxygen-defs.h  error.h  hash.h  list.h  lws_config.h  protocol-dpt.h  reconnect.h  security.h  services.h  session.h  set.h  topic-details.h  topic.h  update.h  utils.h
diffusion/include/internal/: conversation_int.h  diffusion_int.h  error_int.h  queue_int.h  recovery_buffer_int.h  route_int.h  security_int.h  selector_int.h  service_int.h  service_macros.h  session_int.h  topic_int.h  transport-dpt_int.h  transport-dummy_int.h  transport-ws_int.h  transport_int.h
diffusion/include/internal/windows/: win_string.h
diffusion/include/service/: svc-add-topic.h  svc-authentication-deregister.h  svc-authentication-register.h  svc-authentication.h  svc-change-principal.h  svc-fetch.h  svc-get-session-properties.h  svc-missing-topic.h  svc-msg-receiver-registration.h  svc-notify-subscription.h  svc-notify-unsubscription.h  svc-ping-system.h  svc-ping-user.h  svc-remove-topics.h  svc-security-control.h  svc-send-msg-to-filter.h  svc-send-msg-to-session.h  svc-send-msg.h  svc-send-receiver-client.h  svc-session-details-event.h  svc-session-properties-common.h  svc-session-properties-event-batch.h  svc-session-properties-event.h  svc-session-properties-registration.h  svc-session-wills.h  svc-subscribe.h  svc-subscription-control.h  svc-system-auth-control.h  svc-topic-control-registration.h  svc-topic-removal.h  svc-unsubscribe.h  svc-update.h
diffusion/include/types/: client_details_types.h  common_types.h  content_types.h  conversation_types.h  error_types.h  messaging_types.h  security_types.h  service_types.h  session_types.h  topic_details_types.h  topic_types.h  transport_types.h  update_types.h
log-examples/: 1  compile
snap/: snapcraft.yaml
src/: main.cpp  parsed_line.cpp  parsed_line.hpp
src/data/: parsed_line.cpp  parsed_line.hpp  session.cpp  session.h
src/ui/: info_component.cpp  info_component.hpp  log_displayer.cpp  log_displayer.hpp  main_component.cpp  main_component.hpp
